...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Re-enter Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/createAcctText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
...
        android:text="Create An\nAccount"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
...
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:onClick="register"
        android:text="Register"
        android:textColor="?colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />

...
