...
    <string name="welcome">Welcome, %s!</string>
    <string name="invalid_username_character">Username cannot have the \"%s\" character</string>
    <string name="invalid_username_short">Username is too short</string>
    <string name="invalid_username_long">Username is too long</string>
    <string name="invalid_username_email">Cannot sign in with email</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password_short">Password must be at least 6 characters long</string>
    <string name="invalid_password_long">Password shouldn\'t be longer than 32 characters</string>
    <string name="invalid_password_space">Password must not have a space at the beginning or end</string>
    <string name="invalid_password_weak">Password must contain at least:\n
        - One uppercase and lowercase letter\n
        - One number\n
        - One symbol</string>
...
