<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartActivity"
        android:background="?colorPrimary">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:srcCompat="@drawable/flickpick"
                android:id="@+id/startLogo"
                android:contentDescription="@string/logo_desc"
                tools:ignore="ImageContrastCheck"
                android:layout_weight="1" />

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/start_sign_in"
                android:layout_marginTop="16dp"
                android:backgroundTint="?colorSecondary"
                android:textColor="?colorOnSecondary"
                android:layout_weight="1" />

        <Button
                android:text="@string/action_register"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/start_reg"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:textColor="?colorOnSecondary"
                android:layout_weight="1" />

        <Button
                android:text="@string/action_guest"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/start_guest"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:textColor="?colorOnSecondary"
                android:layout_weight="1" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />
    </LinearLayout>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="?colorOnSecondary"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>