...
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_guest">Continue as Guest</string>
    <string name="welcome">Welcome, %s!</string>
    <plurals name="invalid_username_character">
        <item quantity="one">Username cannot have the \"%s\" character</item>
        <item quantity="other">Username cannot have the \"%s\" characters</item>
    </plurals>
    <string name="invalid_username_short">Username is too short</string>
...
    <string name="login_failed">There was an unexpected error while logging in! Error code: %s</string>
    <string name="new_user_prompt">New here? Create a new account instead:</string>

    <!-- Profile Page -->
    <string name="profile_title">Profile</string>
    <string name="settings">Settings</string>
    <string name="guest_sign_in">Sign in to access all features</string>
    <string name="profile_image">Set profile picture</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="social_settings">Social Settings</string>
...
